# neurotrade

./: .gitignore  01_NEUROTRADE.md  CLAUDE.md  Makefile  PROGRESS.md  README.md  pyproject.toml  recent.md
configs/: base.yaml  btc_1min.yaml
docs/: methodo.md
src/neurotrade/: __init__.py
src/neurotrade/backtest/: __init__.py  execution.py  risk.py  walk_forward.py
src/neurotrade/cli/: __init__.py  main.py
src/neurotrade/config/: __init__.py  loader.py  schema.py
src/neurotrade/data/: __init__.py  cache.py  fetcher.py  resample.py
src/neurotrade/evaluation/: __init__.py  metrics.py  report.py
src/neurotrade/experiments/: __init__.py  runner.py
src/neurotrade/features/: __init__.py  momentum.py  pipeline.py  returns.py  scaler.py  volatility.py  volume.py
src/neurotrade/labeling/: __init__.py  meta_label.py  triple_barrier.py
src/neurotrade/models/: __init__.py  base.py  cnn1d.py  lstm.py  mlp.py  trainer.py
tests/: conftest.py  test_backtest.py  test_config.py  test_data.py  test_evaluation.py  test_features.py  test_labeling.py  test_models.py
