[project]
name = "neurotrade"
version = "0.1.0"
description = "Système de recherche quantitative reproductible — réseau de neurones maison, backtest walk-forward honnête."
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "matplotlib>=3.8.0",
    "torch>=2.2.0",
    "scipy>=1.12.0",
]

[project.scripts]
neurotrade = "neurotrade.cli.main:app"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.9.0",
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pandas-stubs>=2.2.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neurotrade"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP", "RUF"]
ignore = [
    "B008",   # function calls in default arguments (typer pattern)
    "N803",   # convention ML : X majuscule pour matrice de features (argument)
    "N806",   # convention ML : X majuscule pour matrice de features (variable locale)
    "N812",   # torch.nn.functional importé comme F (convention universelle PyTorch)
    "RUF002", # caractères grecs (μ, σ) dans docstrings — voulus pour la notation mathématique
    "RUF003", # caractères grecs dans commentaires — idem
]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Bibliothèques tierces sans stubs complets
module = ["ccxt", "ccxt.*", "matplotlib.*", "matplotlib.figure", "matplotlib.axes", "scipy.*"]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]
